# lu-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Run-NIF-Viewer.ps1
apps/nif_viewer/: CMakeLists.txt  main.cpp
apps/shader_audit/: CMakeLists.txt  main.cpp
cmake/: PublishCanonicalViewer.cmake
docs/: legacy_lu_rendering.md  renderer_plan.md
shaders/legacy_lu/: alpha_test.sh  fs_alpha_as_alpha.sc  fs_basic.sc  fs_basic_lit.sc  fs_basic_two_layer.sc  fs_bloom.sc  fs_clear_plastic.sc  fs_fullscreen_copy.sc  fs_gtao.sc  fs_gtao_denoise.sc  fs_legacy_mesh.sc  fs_legopp_emissive.sc  fs_legopp_lighting.sc  fs_metallic_brushed.sc  fs_metallic_polished.sc  fs_ocean_distort.sc  fs_ocean_distort_fx.sc  fs_post_effects.sc  fs_reflection_mask.sc  fs_shadow_depth.sc  fs_terrain_rim.sc  fs_uv_scroll_alpha.sc  fs_view_normal.sc  shadow_common.sh  varying.def.sc  vs_legacy_mesh.sc  vs_lu_lit_mesh.sc  vs_lu_lit_mesh_no_ambient.sc  vs_metallic.sc  vs_ocean_distort.sc  vs_ocean_distort_fx.sc  vs_ocean_distort_unlit.sc  vs_reflection_mask.sc  vs_shadow_depth.sc  vs_terrain_rim.sc  vs_uv_scroll_alpha.sc  vs_view_normal.sc
src/lu_import/: CMakeLists.txt  animation_importer.cpp  lvl_environment_importer.cpp  nif_importer.cpp  shader_database.cpp
src/lu_import/include/lu/renderer/lu_import/: animation_importer.h  lvl_environment_importer.h  nif_importer.h  shader_database.h
src/renderer/: CMakeLists.txt  camera.cpp
src/renderer/include/lu/renderer/: camera.h  math.h  render_types.h
src/renderer_bgfx/: CMakeLists.txt  bgfx_renderer.cpp
src/renderer_bgfx/include/lu/renderer_bgfx/: bgfx_renderer.h
tests/lu_import/: CMakeLists.txt  test_shader_database.cpp
viewer/: README.md
